# nim-leansig

./: .gitignore  .gitmodules  BENCHMARK_RESULTS.md  LICENSE  Makefile  README.md  config.nims  nim_leansig.nimble
.github/workflows/: ci.yml
benches/: README.md  bench.nim
rust/ffi/: Cargo.toml
rust/ffi/src/: leansig.rs  lib.rs  multisig.rs
src/: leansig.nim  leansig_bindings.nim  multisig.nim  multisig_bindings.nim
src/nim_leansig/: submodule.nim
tests/: test_basic  test_basic.nim  test_leansig_rust_matrix.nim  test_multisig.nim
